make depend for 5.6.2.pre1

--- a/agent/helpers/Makefile.depend
+++ b/agent/helpers/Makefile.depend
@@ -41,6 +41,7 @@
 ./all_helpers.lo: ../../include/net-snmp/library/snmp_impl.h
 ./all_helpers.lo: ../../include/net-snmp/library/snmp.h
 ./all_helpers.lo: ../../include/net-snmp/library/snmp-tc.h
+./all_helpers.lo: ../../include/net-snmp/library/getopt.h
 ./all_helpers.lo: ../../include/net-snmp/utilities.h
 ./all_helpers.lo: ../../include/net-snmp/library/system.h
 ./all_helpers.lo: ../../include/net-snmp/library/tools.h
@@ -149,6 +150,7 @@
 ./baby_steps.lo: ../../include/net-snmp/library/snmp_impl.h
 ./baby_steps.lo: ../../include/net-snmp/library/snmp.h
 ./baby_steps.lo: ../../include/net-snmp/library/snmp-tc.h
+./baby_steps.lo: ../../include/net-snmp/library/getopt.h
 ./baby_steps.lo: ../../include/net-snmp/utilities.h
 ./baby_steps.lo: ../../include/net-snmp/library/system.h
 ./baby_steps.lo: ../../include/net-snmp/library/tools.h
@@ -255,6 +257,7 @@
 ./bulk_to_next.lo: ../../include/net-snmp/library/snmp_impl.h
 ./bulk_to_next.lo: ../../include/net-snmp/library/snmp.h
 ./bulk_to_next.lo: ../../include/net-snmp/library/snmp-tc.h
+./bulk_to_next.lo: ../../include/net-snmp/library/getopt.h
 ./bulk_to_next.lo: ../../include/net-snmp/utilities.h
 ./bulk_to_next.lo: ../../include/net-snmp/library/system.h
 ./bulk_to_next.lo: ../../include/net-snmp/library/tools.h
@@ -361,6 +364,7 @@
 ./cache_handler.lo: ../../include/net-snmp/library/snmp_impl.h
 ./cache_handler.lo: ../../include/net-snmp/library/snmp.h
 ./cache_handler.lo: ../../include/net-snmp/library/snmp-tc.h
+./cache_handler.lo: ../../include/net-snmp/library/getopt.h
 ./cache_handler.lo: ../../include/net-snmp/utilities.h
 ./cache_handler.lo: ../../include/net-snmp/library/system.h
 ./cache_handler.lo: ../../include/net-snmp/library/tools.h
@@ -467,6 +471,7 @@
 ./debug_handler.lo: ../../include/net-snmp/library/snmp_impl.h
 ./debug_handler.lo: ../../include/net-snmp/library/snmp.h
 ./debug_handler.lo: ../../include/net-snmp/library/snmp-tc.h
+./debug_handler.lo: ../../include/net-snmp/library/getopt.h
 ./debug_handler.lo: ../../include/net-snmp/utilities.h
 ./debug_handler.lo: ../../include/net-snmp/library/system.h
 ./debug_handler.lo: ../../include/net-snmp/library/tools.h
@@ -573,6 +578,7 @@
 ./instance.lo: ../../include/net-snmp/library/snmp_impl.h
 ./instance.lo: ../../include/net-snmp/library/snmp.h
 ./instance.lo: ../../include/net-snmp/library/snmp-tc.h
+./instance.lo: ../../include/net-snmp/library/getopt.h
 ./instance.lo: ../../include/net-snmp/utilities.h
 ./instance.lo: ../../include/net-snmp/library/system.h
 ./instance.lo: ../../include/net-snmp/library/tools.h
@@ -679,6 +685,7 @@
 ./mode_end_call.lo: ../../include/net-snmp/library/snmp_impl.h
 ./mode_end_call.lo: ../../include/net-snmp/library/snmp.h
 ./mode_end_call.lo: ../../include/net-snmp/library/snmp-tc.h
+./mode_end_call.lo: ../../include/net-snmp/library/getopt.h
 ./mode_end_call.lo: ../../include/net-snmp/utilities.h
 ./mode_end_call.lo: ../../include/net-snmp/library/system.h
 ./mode_end_call.lo: ../../include/net-snmp/library/tools.h
@@ -785,6 +792,7 @@
 ./multiplexer.lo: ../../include/net-snmp/library/snmp_impl.h
 ./multiplexer.lo: ../../include/net-snmp/library/snmp.h
 ./multiplexer.lo: ../../include/net-snmp/library/snmp-tc.h
+./multiplexer.lo: ../../include/net-snmp/library/getopt.h
 ./multiplexer.lo: ../../include/net-snmp/utilities.h
 ./multiplexer.lo: ../../include/net-snmp/library/system.h
 ./multiplexer.lo: ../../include/net-snmp/library/tools.h
@@ -891,6 +899,7 @@
 ./null.lo: ../../include/net-snmp/library/snmp_impl.h
 ./null.lo: ../../include/net-snmp/library/snmp.h
 ./null.lo: ../../include/net-snmp/library/snmp-tc.h
+./null.lo: ../../include/net-snmp/library/getopt.h
 ./null.lo: ../../include/net-snmp/utilities.h
 ./null.lo: ../../include/net-snmp/library/system.h
 ./null.lo: ../../include/net-snmp/library/tools.h
@@ -997,6 +1006,7 @@
 ./old_api.lo: ../../include/net-snmp/library/snmp_impl.h
 ./old_api.lo: ../../include/net-snmp/library/snmp.h
 ./old_api.lo: ../../include/net-snmp/library/snmp-tc.h
+./old_api.lo: ../../include/net-snmp/library/getopt.h
 ./old_api.lo: ../../include/net-snmp/utilities.h
 ./old_api.lo: ../../include/net-snmp/library/system.h
 ./old_api.lo: ../../include/net-snmp/library/tools.h
@@ -1104,6 +1114,7 @@
 ./read_only.lo: ../../include/net-snmp/library/snmp_impl.h
 ./read_only.lo: ../../include/net-snmp/library/snmp.h
 ./read_only.lo: ../../include/net-snmp/library/snmp-tc.h
+./read_only.lo: ../../include/net-snmp/library/getopt.h
 ./read_only.lo: ../../include/net-snmp/utilities.h
 ./read_only.lo: ../../include/net-snmp/library/system.h
 ./read_only.lo: ../../include/net-snmp/library/tools.h
@@ -1210,6 +1221,7 @@
 ./row_merge.lo: ../../include/net-snmp/library/snmp_impl.h
 ./row_merge.lo: ../../include/net-snmp/library/snmp.h
 ./row_merge.lo: ../../include/net-snmp/library/snmp-tc.h
+./row_merge.lo: ../../include/net-snmp/library/getopt.h
 ./row_merge.lo: ../../include/net-snmp/utilities.h
 ./row_merge.lo: ../../include/net-snmp/library/system.h
 ./row_merge.lo: ../../include/net-snmp/library/tools.h
@@ -1316,6 +1328,7 @@
 ./scalar.lo: ../../include/net-snmp/library/snmp_impl.h
 ./scalar.lo: ../../include/net-snmp/library/snmp.h
 ./scalar.lo: ../../include/net-snmp/library/snmp-tc.h
+./scalar.lo: ../../include/net-snmp/library/getopt.h
 ./scalar.lo: ../../include/net-snmp/utilities.h
 ./scalar.lo: ../../include/net-snmp/library/system.h
 ./scalar.lo: ../../include/net-snmp/library/tools.h
@@ -1422,6 +1435,7 @@
 ./scalar_group.lo: ../../include/net-snmp/library/snmp_impl.h
 ./scalar_group.lo: ../../include/net-snmp/library/snmp.h
 ./scalar_group.lo: ../../include/net-snmp/library/snmp-tc.h
+./scalar_group.lo: ../../include/net-snmp/library/getopt.h
 ./scalar_group.lo: ../../include/net-snmp/utilities.h
 ./scalar_group.lo: ../../include/net-snmp/library/system.h
 ./scalar_group.lo: ../../include/net-snmp/library/tools.h
@@ -1528,6 +1542,7 @@
 ./serialize.lo: ../../include/net-snmp/library/snmp_impl.h
 ./serialize.lo: ../../include/net-snmp/library/snmp.h
 ./serialize.lo: ../../include/net-snmp/library/snmp-tc.h
+./serialize.lo: ../../include/net-snmp/library/getopt.h
 ./serialize.lo: ../../include/net-snmp/utilities.h
 ./serialize.lo: ../../include/net-snmp/library/system.h
 ./serialize.lo: ../../include/net-snmp/library/tools.h
@@ -1634,6 +1649,7 @@
 ./snmp_get_statistic.lo: ../../include/net-snmp/library/snmp_impl.h
 ./snmp_get_statistic.lo: ../../include/net-snmp/library/snmp.h
 ./snmp_get_statistic.lo: ../../include/net-snmp/library/snmp-tc.h
+./snmp_get_statistic.lo: ../../include/net-snmp/library/getopt.h
 ./snmp_get_statistic.lo: ../../include/net-snmp/utilities.h
 ./snmp_get_statistic.lo: ../../include/net-snmp/library/system.h
 ./snmp_get_statistic.lo: ../../include/net-snmp/library/tools.h
@@ -1740,6 +1756,7 @@
 ./stash_cache.lo: ../../include/net-snmp/library/snmp_impl.h
 ./stash_cache.lo: ../../include/net-snmp/library/snmp.h
 ./stash_cache.lo: ../../include/net-snmp/library/snmp-tc.h
+./stash_cache.lo: ../../include/net-snmp/library/getopt.h
 ./stash_cache.lo: ../../include/net-snmp/utilities.h
 ./stash_cache.lo: ../../include/net-snmp/library/system.h
 ./stash_cache.lo: ../../include/net-snmp/library/tools.h
@@ -1848,6 +1865,7 @@
 ./stash_to_next.lo: ../../include/net-snmp/library/snmp_impl.h
 ./stash_to_next.lo: ../../include/net-snmp/library/snmp.h
 ./stash_to_next.lo: ../../include/net-snmp/library/snmp-tc.h
+./stash_to_next.lo: ../../include/net-snmp/library/getopt.h
 ./stash_to_next.lo: ../../include/net-snmp/utilities.h
 ./stash_to_next.lo: ../../include/net-snmp/library/system.h
 ./stash_to_next.lo: ../../include/net-snmp/library/tools.h
@@ -1956,6 +1974,7 @@
 ./table_array.lo: ../../include/net-snmp/library/snmp_impl.h
 ./table_array.lo: ../../include/net-snmp/library/snmp.h
 ./table_array.lo: ../../include/net-snmp/library/snmp-tc.h
+./table_array.lo: ../../include/net-snmp/library/getopt.h
 ./table_array.lo: ../../include/net-snmp/utilities.h
 ./table_array.lo: ../../include/net-snmp/library/system.h
 ./table_array.lo: ../../include/net-snmp/library/tools.h
@@ -2062,6 +2081,7 @@
 ./table.lo: ../../include/net-snmp/library/snmp_impl.h
 ./table.lo: ../../include/net-snmp/library/snmp.h
 ./table.lo: ../../include/net-snmp/library/snmp-tc.h
+./table.lo: ../../include/net-snmp/library/getopt.h
 ./table.lo: ../../include/net-snmp/utilities.h
 ./table.lo: ../../include/net-snmp/library/system.h
 ./table.lo: ../../include/net-snmp/library/tools.h
@@ -2168,6 +2188,7 @@
 ./table_container.lo: ../../include/net-snmp/library/snmp_impl.h
 ./table_container.lo: ../../include/net-snmp/library/snmp.h
 ./table_container.lo: ../../include/net-snmp/library/snmp-tc.h
+./table_container.lo: ../../include/net-snmp/library/getopt.h
 ./table_container.lo: ../../include/net-snmp/utilities.h
 ./table_container.lo: ../../include/net-snmp/library/system.h
 ./table_container.lo: ../../include/net-snmp/library/tools.h
@@ -2274,6 +2295,7 @@
 ./table_data.lo: ../../include/net-snmp/library/snmp_impl.h
 ./table_data.lo: ../../include/net-snmp/library/snmp.h
 ./table_data.lo: ../../include/net-snmp/library/snmp-tc.h
+./table_data.lo: ../../include/net-snmp/library/getopt.h
 ./table_data.lo: ../../include/net-snmp/utilities.h
 ./table_data.lo: ../../include/net-snmp/library/system.h
 ./table_data.lo: ../../include/net-snmp/library/tools.h
@@ -2380,6 +2402,7 @@
 ./table_dataset.lo: ../../include/net-snmp/library/snmp_impl.h
 ./table_dataset.lo: ../../include/net-snmp/library/snmp.h
 ./table_dataset.lo: ../../include/net-snmp/library/snmp-tc.h
+./table_dataset.lo: ../../include/net-snmp/library/getopt.h
 ./table_dataset.lo: ../../include/net-snmp/utilities.h
 ./table_dataset.lo: ../../include/net-snmp/library/system.h
 ./table_dataset.lo: ../../include/net-snmp/library/tools.h
@@ -2486,6 +2509,7 @@
 ./table_iterator.lo: ../../include/net-snmp/library/snmp_impl.h
 ./table_iterator.lo: ../../include/net-snmp/library/snmp.h
 ./table_iterator.lo: ../../include/net-snmp/library/snmp-tc.h
+./table_iterator.lo: ../../include/net-snmp/library/getopt.h
 ./table_iterator.lo: ../../include/net-snmp/utilities.h
 ./table_iterator.lo: ../../include/net-snmp/library/system.h
 ./table_iterator.lo: ../../include/net-snmp/library/tools.h
@@ -2593,6 +2617,7 @@
 ./table_row.lo: ../../include/net-snmp/library/snmp_impl.h
 ./table_row.lo: ../../include/net-snmp/library/snmp.h
 ./table_row.lo: ../../include/net-snmp/library/snmp-tc.h
+./table_row.lo: ../../include/net-snmp/library/getopt.h
 ./table_row.lo: ../../include/net-snmp/utilities.h
 ./table_row.lo: ../../include/net-snmp/library/system.h
 ./table_row.lo: ../../include/net-snmp/library/tools.h
@@ -2699,6 +2724,7 @@
 ./table_tdata.lo: ../../include/net-snmp/library/snmp_impl.h
 ./table_tdata.lo: ../../include/net-snmp/library/snmp.h
 ./table_tdata.lo: ../../include/net-snmp/library/snmp-tc.h
+./table_tdata.lo: ../../include/net-snmp/library/getopt.h
 ./table_tdata.lo: ../../include/net-snmp/utilities.h
 ./table_tdata.lo: ../../include/net-snmp/library/system.h
 ./table_tdata.lo: ../../include/net-snmp/library/tools.h
@@ -2805,6 +2831,7 @@
 ./watcher.lo: ../../include/net-snmp/library/snmp_impl.h
 ./watcher.lo: ../../include/net-snmp/library/snmp.h
 ./watcher.lo: ../../include/net-snmp/library/snmp-tc.h
+./watcher.lo: ../../include/net-snmp/library/getopt.h
 ./watcher.lo: ../../include/net-snmp/utilities.h
 ./watcher.lo: ../../include/net-snmp/library/system.h
 ./watcher.lo: ../../include/net-snmp/library/tools.h
