--- a/apps/snmpnetstat/Makefile.depend
+++ b/apps/snmpnetstat/Makefile.depend
@@ -40,6 +40,7 @@
 ./if.lo: ../../include/net-snmp/library/snmp_impl.h
 ./if.lo: ../../include/net-snmp/library/snmp.h
 ./if.lo: ../../include/net-snmp/library/snmp-tc.h
+./if.lo: ../../include/net-snmp/library/getopt.h
 ./if.lo: ../../include/net-snmp/utilities.h
 ./if.lo: ../../include/net-snmp/library/system.h
 ./if.lo: ../../include/net-snmp/library/tools.h
@@ -110,6 +111,7 @@
 ./inet6.lo: ../../include/net-snmp/library/snmp_impl.h
 ./inet6.lo: ../../include/net-snmp/library/snmp.h
 ./inet6.lo: ../../include/net-snmp/library/snmp-tc.h
+./inet6.lo: ../../include/net-snmp/library/getopt.h
 ./inet6.lo: ../../include/net-snmp/utilities.h
 ./inet6.lo: ../../include/net-snmp/library/system.h
 ./inet6.lo: ../../include/net-snmp/library/tools.h
@@ -179,6 +181,7 @@
 ./inet.lo: ../../include/net-snmp/library/snmp_impl.h
 ./inet.lo: ../../include/net-snmp/library/snmp.h
 ./inet.lo: ../../include/net-snmp/library/snmp-tc.h
+./inet.lo: ../../include/net-snmp/library/getopt.h
 ./inet.lo: ../../include/net-snmp/utilities.h
 ./inet.lo: ../../include/net-snmp/library/system.h
 ./inet.lo: ../../include/net-snmp/library/tools.h
@@ -248,6 +251,7 @@
 ./main.lo: ../../include/net-snmp/library/snmp_impl.h
 ./main.lo: ../../include/net-snmp/library/snmp.h
 ./main.lo: ../../include/net-snmp/library/snmp-tc.h
+./main.lo: ../../include/net-snmp/library/getopt.h
 ./main.lo: ../../include/net-snmp/utilities.h
 ./main.lo: ../../include/net-snmp/library/system.h
 ./main.lo: ../../include/net-snmp/library/tools.h
@@ -317,6 +321,7 @@
 ./route.lo: ../../include/net-snmp/library/snmp_impl.h
 ./route.lo: ../../include/net-snmp/library/snmp.h
 ./route.lo: ../../include/net-snmp/library/snmp-tc.h
+./route.lo: ../../include/net-snmp/library/getopt.h
 ./route.lo: ../../include/net-snmp/utilities.h
 ./route.lo: ../../include/net-snmp/library/system.h
 ./route.lo: ../../include/net-snmp/library/tools.h
@@ -386,6 +391,7 @@
 ./winstub.lo: ../../include/net-snmp/library/snmp_impl.h
 ./winstub.lo: ../../include/net-snmp/library/snmp.h
 ./winstub.lo: ../../include/net-snmp/library/snmp-tc.h
+./winstub.lo: ../../include/net-snmp/library/getopt.h
 ./winstub.lo: ../../include/net-snmp/utilities.h
 ./winstub.lo: ../../include/net-snmp/library/system.h
 ./winstub.lo: ../../include/net-snmp/library/tools.h
