--- a/apps/Makefile.depend
+++ b/apps/Makefile.depend
@@ -41,6 +41,7 @@
 ./agentxtrap.lo: ../include/net-snmp/library/snmp_impl.h
 ./agentxtrap.lo: ../include/net-snmp/library/snmp.h
 ./agentxtrap.lo: ../include/net-snmp/library/snmp-tc.h
+./agentxtrap.lo: ../include/net-snmp/library/getopt.h
 ./agentxtrap.lo: ../include/net-snmp/utilities.h
 ./agentxtrap.lo: ../include/net-snmp/library/system.h
 ./agentxtrap.lo: ../include/net-snmp/library/tools.h
@@ -151,6 +152,7 @@
 ./encode_keychange.lo: ../include/net-snmp/library/snmp_impl.h
 ./encode_keychange.lo: ../include/net-snmp/library/snmp.h
 ./encode_keychange.lo: ../include/net-snmp/library/snmp-tc.h
+./encode_keychange.lo: ../include/net-snmp/library/getopt.h
 ./encode_keychange.lo: ../include/net-snmp/utilities.h
 ./encode_keychange.lo: ../include/net-snmp/library/system.h
 ./encode_keychange.lo: ../include/net-snmp/library/tools.h
@@ -236,6 +238,7 @@
 ./snmpbulkget.lo: ../include/net-snmp/library/snmp_assert.h
 ./snmpbulkget.lo: ../include/net-snmp/version.h 
 ./snmpbulkget.lo: ../include/net-snmp/net-snmp-includes.h
+./snmpbulkget.lo: ../include/net-snmp/library/getopt.h
 ./snmpbulkget.lo: ../include/net-snmp/config_api.h
 ./snmpbulkget.lo: ../include/net-snmp/library/read_config.h
 ./snmpbulkget.lo: ../include/net-snmp/library/default_store.h
@@ -289,6 +292,7 @@
 ./snmpbulkwalk.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpbulkwalk.lo: ../include/net-snmp/library/snmp.h
 ./snmpbulkwalk.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpbulkwalk.lo: ../include/net-snmp/library/getopt.h
 ./snmpbulkwalk.lo: ../include/net-snmp/utilities.h
 ./snmpbulkwalk.lo: ../include/net-snmp/library/system.h
 ./snmpbulkwalk.lo: ../include/net-snmp/library/tools.h
@@ -358,6 +362,7 @@
 ./snmpdelta.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpdelta.lo: ../include/net-snmp/library/snmp.h
 ./snmpdelta.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpdelta.lo: ../include/net-snmp/library/getopt.h
 ./snmpdelta.lo: ../include/net-snmp/utilities.h
 ./snmpdelta.lo: ../include/net-snmp/library/system.h
 ./snmpdelta.lo: ../include/net-snmp/library/tools.h
@@ -425,6 +430,7 @@
 ./snmpdf.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpdf.lo: ../include/net-snmp/library/snmp.h
 ./snmpdf.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpdf.lo: ../include/net-snmp/library/getopt.h
 ./snmpdf.lo: ../include/net-snmp/utilities.h
 ./snmpdf.lo: ../include/net-snmp/library/system.h
 ./snmpdf.lo: ../include/net-snmp/library/tools.h
@@ -507,7 +513,8 @@
 ./snmpget.lo: ../include/net-snmp/library/snmp_assert.h
 ./snmpget.lo: ../include/net-snmp/version.h
 ./snmpget.lo: ../include/net-snmp/net-snmp-includes.h 
-./snmpget.lo:  ../include/net-snmp/config_api.h
+./snmpget.lo: ../include/net-snmp/library/getopt.h
+./snmpget.lo: ../include/net-snmp/config_api.h
 ./snmpget.lo: ../include/net-snmp/library/read_config.h
 ./snmpget.lo: ../include/net-snmp/library/default_store.h
 ./snmpget.lo: ../include/net-snmp/library/snmp_parse_args.h
@@ -560,6 +567,7 @@
 ./snmpgetnext.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpgetnext.lo: ../include/net-snmp/library/snmp.h
 ./snmpgetnext.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpgetnext.lo: ../include/net-snmp/library/getopt.h
 ./snmpgetnext.lo: ../include/net-snmp/utilities.h
 ./snmpgetnext.lo: ../include/net-snmp/library/system.h
 ./snmpgetnext.lo: ../include/net-snmp/library/tools.h
@@ -628,6 +636,7 @@
 ./snmpset.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpset.lo: ../include/net-snmp/library/snmp.h
 ./snmpset.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpset.lo: ../include/net-snmp/library/getopt.h
 ./snmpset.lo: ../include/net-snmp/utilities.h
 ./snmpset.lo: ../include/net-snmp/library/system.h
 ./snmpset.lo: ../include/net-snmp/library/tools.h
@@ -711,6 +720,7 @@
 ./snmpstatus.lo: ../include/net-snmp/library/snmp_assert.h
 ./snmpstatus.lo: ../include/net-snmp/version.h
 ./snmpstatus.lo: ../include/net-snmp/net-snmp-includes.h
+./snmpstatus.lo: ../include/net-snmp/library/getopt.h
 ./snmpstatus.lo: ../include/net-snmp/config_api.h
 ./snmpstatus.lo: ../include/net-snmp/library/read_config.h
 ./snmpstatus.lo: ../include/net-snmp/library/default_store.h
@@ -764,6 +774,7 @@
 ./snmptable.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmptable.lo: ../include/net-snmp/library/snmp.h
 ./snmptable.lo: ../include/net-snmp/library/snmp-tc.h
+./snmptable.lo: ../include/net-snmp/library/getopt.h
 ./snmptable.lo: ../include/net-snmp/utilities.h
 ./snmptable.lo: ../include/net-snmp/library/system.h
 ./snmptable.lo: ../include/net-snmp/library/tools.h
@@ -833,6 +844,7 @@
 ./snmptest.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmptest.lo: ../include/net-snmp/library/snmp.h
 ./snmptest.lo: ../include/net-snmp/library/snmp-tc.h
+./snmptest.lo: ../include/net-snmp/library/getopt.h
 ./snmptest.lo: ../include/net-snmp/utilities.h
 ./snmptest.lo: ../include/net-snmp/library/system.h
 ./snmptest.lo: ../include/net-snmp/library/tools.h
@@ -899,6 +911,7 @@
 ./snmptls.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmptls.lo: ../include/net-snmp/library/snmp.h
 ./snmptls.lo: ../include/net-snmp/library/snmp-tc.h
+./snmptls.lo: ../include/net-snmp/library/getopt.h
 ./snmptls.lo: ../include/net-snmp/utilities.h
 ./snmptls.lo: ../include/net-snmp/library/system.h
 ./snmptls.lo: ../include/net-snmp/library/tools.h
@@ -1067,6 +1080,7 @@
 ./snmptrap.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmptrap.lo: ../include/net-snmp/library/snmp.h
 ./snmptrap.lo: ../include/net-snmp/library/snmp-tc.h
+./snmptrap.lo: ../include/net-snmp/library/getopt.h
 ./snmptrap.lo: ../include/net-snmp/utilities.h
 ./snmptrap.lo: ../include/net-snmp/library/system.h
 ./snmptrap.lo: ../include/net-snmp/library/tools.h
@@ -1135,6 +1149,7 @@
 ./snmptrapd_auth.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmptrapd_auth.lo: ../include/net-snmp/library/snmp.h
 ./snmptrapd_auth.lo: ../include/net-snmp/library/snmp-tc.h
+./snmptrapd_auth.lo: ../include/net-snmp/library/getopt.h
 ./snmptrapd_auth.lo: ../include/net-snmp/utilities.h
 ./snmptrapd_auth.lo: ../include/net-snmp/library/system.h
 ./snmptrapd_auth.lo: ../include/net-snmp/library/tools.h
@@ -1209,6 +1224,7 @@
 ./snmptrapd.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmptrapd.lo: ../include/net-snmp/library/snmp.h
 ./snmptrapd.lo: ../include/net-snmp/library/snmp-tc.h
+./snmptrapd.lo: ../include/net-snmp/library/getopt.h
 ./snmptrapd.lo: ../include/net-snmp/utilities.h
 ./snmptrapd.lo: ../include/net-snmp/library/system.h
 ./snmptrapd.lo: ../include/net-snmp/library/tools.h
@@ -1342,6 +1358,7 @@
 ./snmptrapd_handlers.lo: ../include/net-snmp/library/snmp_assert.h
 ./snmptrapd_handlers.lo: ../include/net-snmp/version.h
 ./snmptrapd_handlers.lo: ../include/net-snmp/net-snmp-includes.h
+./snmptrapd_handlers.lo: ../include/net-snmp/library/getopt.h
 ./snmptrapd_handlers.lo: ../include/net-snmp/snmpv3_api.h
 ./snmptrapd_handlers.lo: ../include/net-snmp/library/snmpv3.h
 ./snmptrapd_handlers.lo: ../include/net-snmp/library/transform_oids.h
@@ -1430,6 +1447,7 @@
 ./snmptrapd_log.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmptrapd_log.lo: ../include/net-snmp/library/snmp.h
 ./snmptrapd_log.lo: ../include/net-snmp/library/snmp-tc.h
+./snmptrapd_log.lo: ../include/net-snmp/library/getopt.h
 ./snmptrapd_log.lo: ../include/net-snmp/utilities.h
 ./snmptrapd_log.lo: ../include/net-snmp/library/system.h
 ./snmptrapd_log.lo: ../include/net-snmp/library/tools.h
@@ -1500,6 +1518,7 @@
 ./snmpusm.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpusm.lo: ../include/net-snmp/library/snmp.h
 ./snmpusm.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpusm.lo: ../include/net-snmp/library/getopt.h
 ./snmpusm.lo: ../include/net-snmp/utilities.h
 ./snmpusm.lo: ../include/net-snmp/library/system.h
 ./snmpusm.lo: ../include/net-snmp/library/tools.h
@@ -1568,6 +1587,7 @@
 ./snmpvacm.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpvacm.lo: ../include/net-snmp/library/snmp.h
 ./snmpvacm.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpvacm.lo: ../include/net-snmp/library/getopt.h
 ./snmpvacm.lo: ../include/net-snmp/utilities.h
 ./snmpvacm.lo: ../include/net-snmp/library/system.h
 ./snmpvacm.lo: ../include/net-snmp/library/tools.h
@@ -1636,6 +1656,7 @@
 ./snmpwalk.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpwalk.lo: ../include/net-snmp/library/snmp.h
 ./snmpwalk.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpwalk.lo: ../include/net-snmp/library/getopt.h
 ./snmpwalk.lo: ../include/net-snmp/utilities.h
 ./snmpwalk.lo: ../include/net-snmp/library/system.h
 ./snmpwalk.lo: ../include/net-snmp/library/tools.h
@@ -1705,6 +1726,7 @@
 ./snmpnetstat/if.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpnetstat/if.lo: ../include/net-snmp/library/snmp.h
 ./snmpnetstat/if.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpnetstat/if.lo: ../include/net-snmp/library/getopt.h
 ./snmpnetstat/if.lo: ../include/net-snmp/utilities.h
 ./snmpnetstat/if.lo: ../include/net-snmp/library/system.h
 ./snmpnetstat/if.lo: ../include/net-snmp/library/tools.h
@@ -1776,6 +1798,7 @@
 ./snmpnetstat/inet6.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpnetstat/inet6.lo: ../include/net-snmp/library/snmp.h
 ./snmpnetstat/inet6.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpnetstat/inet6.lo: ../include/net-snmp/library/getopt.h
 ./snmpnetstat/inet6.lo: ../include/net-snmp/utilities.h
 ./snmpnetstat/inet6.lo: ../include/net-snmp/library/system.h
 ./snmpnetstat/inet6.lo: ../include/net-snmp/library/tools.h
@@ -1846,6 +1869,7 @@
 ./snmpnetstat/inet.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpnetstat/inet.lo: ../include/net-snmp/library/snmp.h
 ./snmpnetstat/inet.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpnetstat/inet.lo: ../include/net-snmp/library/getopt.h
 ./snmpnetstat/inet.lo: ../include/net-snmp/utilities.h
 ./snmpnetstat/inet.lo: ../include/net-snmp/library/system.h
 ./snmpnetstat/inet.lo: ../include/net-snmp/library/tools.h
@@ -1916,6 +1940,7 @@
 ./snmpnetstat/main.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpnetstat/main.lo: ../include/net-snmp/library/snmp.h
 ./snmpnetstat/main.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpnetstat/main.lo: ../include/net-snmp/library/getopt.h
 ./snmpnetstat/main.lo: ../include/net-snmp/utilities.h
 ./snmpnetstat/main.lo: ../include/net-snmp/library/system.h
 ./snmpnetstat/main.lo: ../include/net-snmp/library/tools.h
@@ -1986,6 +2011,7 @@
 ./snmpnetstat/route.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpnetstat/route.lo: ../include/net-snmp/library/snmp.h
 ./snmpnetstat/route.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpnetstat/route.lo: ../include/net-snmp/library/getopt.h
 ./snmpnetstat/route.lo: ../include/net-snmp/utilities.h
 ./snmpnetstat/route.lo: ../include/net-snmp/library/system.h
 ./snmpnetstat/route.lo: ../include/net-snmp/library/tools.h
@@ -2056,6 +2082,7 @@
 ./snmpnetstat/winstub.lo: ../include/net-snmp/library/snmp_impl.h
 ./snmpnetstat/winstub.lo: ../include/net-snmp/library/snmp.h
 ./snmpnetstat/winstub.lo: ../include/net-snmp/library/snmp-tc.h
+./snmpnetstat/winstub.lo: ../include/net-snmp/library/getopt.h
 ./snmpnetstat/winstub.lo: ../include/net-snmp/utilities.h
 ./snmpnetstat/winstub.lo: ../include/net-snmp/library/system.h
 ./snmpnetstat/winstub.lo: ../include/net-snmp/library/tools.h
