--- a/apps/snmpnetstat/Makefile.depend
+++ b/apps/snmpnetstat/Makefile.depend
@@ -1,6 +1,9 @@
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 ./if.lo: ../../include/net-snmp/net-snmp-config.h
+./if.lo: ../../include/net-snmp/system/linux.h
+./if.lo: ../../include/net-snmp/system/sysv.h
+./if.lo: ../../include/net-snmp/system/generic.h
 ./if.lo: ../../include/net-snmp/net-snmp-includes.h 
 ./if.lo: ../../include/net-snmp/definitions.h ../../include/net-snmp/types.h
 ./if.lo:  ../../include/net-snmp/library/oid.h
@@ -18,11 +21,14 @@
 ./if.lo: ../../include/net-snmp/library/snmp_transport.h
 ./if.lo: ../../include/net-snmp/library/snmp_service.h
 ./if.lo: ../../include/net-snmp/library/snmpCallbackDomain.h
-./if.lo: ../../include/net-snmp/library/snmpUDPDomain.h
+./if.lo: ../../include/net-snmp/library/snmpUnixDomain.h
+./if.lo:  ../../include/net-snmp/library/snmpUDPDomain.h
 ./if.lo: ../../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
 ./if.lo: ../../include/net-snmp/library/snmpIPv4BaseDomain.h
 ./if.lo: ../../include/net-snmp/library/snmpUDPBaseDomain.h
 ./if.lo: ../../include/net-snmp/library/snmpTCPDomain.h
+./if.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
+./if.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
 ./if.lo: ../../include/net-snmp/library/ucd_compat.h
 ./if.lo: ../../include/net-snmp/library/mib.h
 ./if.lo: ../../include/net-snmp/mib_api.h
@@ -51,6 +57,7 @@
 ./if.lo: ../../include/net-snmp/version.h ../../include/net-snmp/config_api.h
 ./if.lo: ../../include/net-snmp/library/read_config.h
 ./if.lo: ../../include/net-snmp/library/default_store.h
+./if.lo: ../../include/net-snmp/net-snmp-config.h
 ./if.lo: ../../include/net-snmp/library/snmp_parse_args.h
 ./if.lo: ../../include/net-snmp/library/snmp_enum.h
 ./if.lo: ../../include/net-snmp/library/vacm.h
@@ -64,9 +71,8 @@
 ./if.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
 ./if.lo: ../../include/net-snmp/library/snmptsm.h
 ./if.lo: ../../include/net-snmp/library/snmpusm.h 
-./if.lo:   main.h
-./if.lo: netstat.h
-./inet6.lo: ../../include/net-snmp/net-snmp-config.h 
+./if.lo:  main.h netstat.h
+./inet6.lo: ../../include/net-snmp/net-snmp-config.h
 ./inet6.lo: ../../include/net-snmp/net-snmp-includes.h 
 ./inet6.lo: ../../include/net-snmp/definitions.h
 ./inet6.lo: ../../include/net-snmp/types.h 
@@ -85,11 +91,14 @@
 ./inet6.lo: ../../include/net-snmp/library/snmp_transport.h
 ./inet6.lo: ../../include/net-snmp/library/snmp_service.h
 ./inet6.lo: ../../include/net-snmp/library/snmpCallbackDomain.h
+./inet6.lo: ../../include/net-snmp/library/snmpUnixDomain.h
 ./inet6.lo: ../../include/net-snmp/library/snmpUDPDomain.h
 ./inet6.lo: ../../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
 ./inet6.lo: ../../include/net-snmp/library/snmpIPv4BaseDomain.h
 ./inet6.lo: ../../include/net-snmp/library/snmpUDPBaseDomain.h
 ./inet6.lo: ../../include/net-snmp/library/snmpTCPDomain.h
+./inet6.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
+./inet6.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
 ./inet6.lo: ../../include/net-snmp/library/ucd_compat.h
 ./inet6.lo: ../../include/net-snmp/library/mib.h
 ./inet6.lo: ../../include/net-snmp/mib_api.h
@@ -132,7 +141,7 @@
 ./inet6.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
 ./inet6.lo: ../../include/net-snmp/library/snmptsm.h
 ./inet6.lo: ../../include/net-snmp/library/snmpusm.h main.h netstat.h
-./inet.lo: ../../include/net-snmp/net-snmp-config.h 
+./inet.lo: ../../include/net-snmp/net-snmp-config.h
 ./inet.lo: ../../include/net-snmp/net-snmp-includes.h 
 ./inet.lo: ../../include/net-snmp/definitions.h
 ./inet.lo: ../../include/net-snmp/types.h 
@@ -151,11 +160,14 @@
 ./inet.lo: ../../include/net-snmp/library/snmp_transport.h
 ./inet.lo: ../../include/net-snmp/library/snmp_service.h
 ./inet.lo: ../../include/net-snmp/library/snmpCallbackDomain.h
+./inet.lo: ../../include/net-snmp/library/snmpUnixDomain.h
 ./inet.lo: ../../include/net-snmp/library/snmpUDPDomain.h
 ./inet.lo: ../../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
 ./inet.lo: ../../include/net-snmp/library/snmpIPv4BaseDomain.h
 ./inet.lo: ../../include/net-snmp/library/snmpUDPBaseDomain.h
 ./inet.lo: ../../include/net-snmp/library/snmpTCPDomain.h
+./inet.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
+./inet.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
 ./inet.lo: ../../include/net-snmp/library/ucd_compat.h
 ./inet.lo: ../../include/net-snmp/library/mib.h
 ./inet.lo: ../../include/net-snmp/mib_api.h
@@ -217,11 +229,14 @@
 ./main.lo: ../../include/net-snmp/library/snmp_transport.h
 ./main.lo: ../../include/net-snmp/library/snmp_service.h
 ./main.lo: ../../include/net-snmp/library/snmpCallbackDomain.h
+./main.lo: ../../include/net-snmp/library/snmpUnixDomain.h
 ./main.lo: ../../include/net-snmp/library/snmpUDPDomain.h
 ./main.lo: ../../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
 ./main.lo: ../../include/net-snmp/library/snmpIPv4BaseDomain.h
 ./main.lo: ../../include/net-snmp/library/snmpUDPBaseDomain.h
 ./main.lo: ../../include/net-snmp/library/snmpTCPDomain.h
+./main.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
+./main.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
 ./main.lo: ../../include/net-snmp/library/ucd_compat.h
 ./main.lo: ../../include/net-snmp/library/mib.h
 ./main.lo: ../../include/net-snmp/mib_api.h
@@ -263,11 +278,10 @@
 ./main.lo: ../../include/net-snmp/library/snmp_secmod.h
 ./main.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
 ./main.lo: ../../include/net-snmp/library/snmptsm.h
-./main.lo: ../../include/net-snmp/library/snmpusm.h 
-./main.lo:  main.h netstat.h
-./route.lo: ../../include/net-snmp/net-snmp-config.h 
+./main.lo: ../../include/net-snmp/library/snmpusm.h main.h netstat.h
+./route.lo: ../../include/net-snmp/net-snmp-config.h
 ./route.lo: ../../include/net-snmp/net-snmp-includes.h 
-./route.lo:  ../../include/net-snmp/definitions.h
+./route.lo: ../../include/net-snmp/definitions.h
 ./route.lo: ../../include/net-snmp/types.h 
 ./route.lo: ../../include/net-snmp/library/oid.h
 ./route.lo: ../../include/net-snmp/library/types.h
@@ -284,11 +298,14 @@
 ./route.lo: ../../include/net-snmp/library/snmp_transport.h
 ./route.lo: ../../include/net-snmp/library/snmp_service.h
 ./route.lo: ../../include/net-snmp/library/snmpCallbackDomain.h
+./route.lo: ../../include/net-snmp/library/snmpUnixDomain.h
 ./route.lo: ../../include/net-snmp/library/snmpUDPDomain.h
 ./route.lo: ../../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
 ./route.lo: ../../include/net-snmp/library/snmpIPv4BaseDomain.h
 ./route.lo: ../../include/net-snmp/library/snmpUDPBaseDomain.h
 ./route.lo: ../../include/net-snmp/library/snmpTCPDomain.h
+./route.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
+./route.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
 ./route.lo: ../../include/net-snmp/library/ucd_compat.h
 ./route.lo: ../../include/net-snmp/library/mib.h
 ./route.lo: ../../include/net-snmp/mib_api.h
@@ -330,8 +347,7 @@
 ./route.lo: ../../include/net-snmp/library/snmp_secmod.h
 ./route.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
 ./route.lo: ../../include/net-snmp/library/snmptsm.h
-./route.lo: ../../include/net-snmp/library/snmpusm.h 
-./route.lo:  main.h netstat.h
+./route.lo: ../../include/net-snmp/library/snmpusm.h main.h netstat.h
 ./winstub.lo: ../../include/net-snmp/net-snmp-config.h
 ./winstub.lo: ../../include/net-snmp/net-snmp-includes.h 
 ./winstub.lo: ../../include/net-snmp/definitions.h
@@ -351,11 +367,14 @@
 ./winstub.lo: ../../include/net-snmp/library/snmp_transport.h
 ./winstub.lo: ../../include/net-snmp/library/snmp_service.h
 ./winstub.lo: ../../include/net-snmp/library/snmpCallbackDomain.h
+./winstub.lo: ../../include/net-snmp/library/snmpUnixDomain.h
 ./winstub.lo: ../../include/net-snmp/library/snmpUDPDomain.h
 ./winstub.lo: ../../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
 ./winstub.lo: ../../include/net-snmp/library/snmpIPv4BaseDomain.h
 ./winstub.lo: ../../include/net-snmp/library/snmpUDPBaseDomain.h
 ./winstub.lo: ../../include/net-snmp/library/snmpTCPDomain.h
+./winstub.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
+./winstub.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
 ./winstub.lo: ../../include/net-snmp/library/ucd_compat.h
 ./winstub.lo: ../../include/net-snmp/library/mib.h
 ./winstub.lo: ../../include/net-snmp/mib_api.h
